Simplify default runtime